Patch ArrayType depth comparison in org.processj.ArrayType#typeEqual