@@ -39,7 +39,7 @@ public class PrimitiveLiteral extends Literal {
         nchildren = 0;
 
         if (kind == CharKind)
-            text = new Integer(parseChar(text)).toString();
+            text = Integer.valueOf(text).toString(); // TODO: Redundant conversion to verify range?
         else if (kind == IntKind || kind == ShortKind || kind == ByteKind) {
             try {
                 text = (Integer.decode(text)).toString();
